<?xml version="1.0"?>
<package format="2">
  <name>abb_irb2600_support</name>
  <version>0.1.0</version>
  <description>The abb_irb_2600 package</description>

  <maintainer email="jonathan.meyer@swri.org">Jonathan Meyer (SWRI)</maintainer>

  <license>Apache2</license>

  <author email="cody.bressler@swri.org">Cody Bressler</author>
  <author email="jonathan.meyer@swri.org">Jonathan Meyer (SWRI)</author>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend version_gte="1.9.55">roslaunch</test_depend>

  <exec_depend>abb_driver</exec_depend>
  <exec_depend>abb_resources</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
